Peruvian party names

--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -7743,14 +7743,20 @@ PAP_radical;Republicani;Republicani;Republicani;;Republicani;;;;;;;;;
 PAP_socialist;Socialisti Cristiani;Sozialisti Christiano;Sozialisti Christiano;;Sozialisti Christiano;;;;;;;;;
 PAP_liberal;Liberale;Liberale;Liberali;;Liberale;;;;;;;;;
 PAP_communist;Radicali Socialisti;Radical Sozialisti;Radical Sozialisti;;Radical Sozialisti;;;;;;;;;
+PBC_communist;Partido Comunista Andino;Partido Comunista Andino;Partido Comunista Andino;;Partido Comunista Andino;;;;;;;;;
 PAP_fascist;Fascisti;Fasciste;Fascisti;;Fascista;;;;;;;;;
-PEU_conservative;Partido Popular;Partido populaire;Partido Popular;;Partido Popular;;;;;;;;;
-PEU_liberal;Partido Liberal;Partido Liberal;Partido Liberal;;Partido Liberal;;;;;;;;;
-PEU_reactionary;Partido Nacionalista;Partido nationaliste;Partido Nationalist;;Partido Nationalista;;;;;;;;;
-PEU_radical;Partido Radical;Partido Radical;Partido Radical;;Partido Radical;;;;;;;;;
-PEU_socialist;Partido Socialista;Partido socialiste;Partido Socialist;;Partido Socialista;;;;;;;;;
-PEU_communist;Partido Comunista;Partido communiste;Partido Communist;;Partido Comunista;;;;;;;;;
-PEU_fascist;Partido Fascista;Partido fasciste;Partido Fascist;;Partido Fascista;;;;;;;;;
+PEU_conservative;Conservadores;Conservadores;Conservadores;;Conservadores;;;;;;;;;
+PEU_conservative_2;Partido Constitucional;Partido Constitucional;Partido Constitucional;;Partido Constitucional;;;;;;;;;
+PEU_liberal;Liberales;Liberales;Liberales;;Liberales;;;;;;;;;
+PEU_liberal_2;Partido Civil;Partido Civil;Partido Civil;;Partido Civil;;;;;;;;;
+PEU_liberal_3;Partido Democrático Reformista;Partido Democrático Reformista;Partido Democrático Reformista;;Partido Democrático Reformista;;;;;;;;;
+PEU_reactionary;Rivagüerinos;Rivagüerinos;Rivagüerinos;;Rivagüerinos;;;;;;;;;
+PEU_radical;Radicales;Radicales;Radicales;;Radicales;;;;;;;;;
+PEU_radical_2;Unión Nacional;Unión Nacional;Unión Nacional;;Unión Nacional;;;;;;;;;
+PEU_socialist;Socialistas;Socialistas;Socialistas;;Socialistas;;;;;;;;;
+PEU_socialist_2;Alianza Popular Revolucionaria Americana;Alianza Popular Revolucionaria Americana;Alianza Popular Revolucionaria Americana;;Alianza Popular Revolucionaria Americana;;;;;;;;;
+PEU_communist;Partido Comunista Peruano;Partido Comunista Peruano;Partido Comunista Peruano;;Partido Comunista Peruano;;;;;;;;;
+PEU_fascist;Unión Revolucionaria;Unión Revolucionaria;Unión Revolucionaria;;Unión Revolucionaria;;;;;;;;;
 PNM_conservative;Partido Conservador;Partido Conservador;Partido Conservador;;Partido Conservador;;;;;;;;;
 PNM_liberal;Partido Liberal;Partido Liberal;Partido Liberal;;Partido Liberal;;;;;;;;;
 PNM_reactionary;Partido Nacionalista;Partido nationaliste;Partido Nationalist;;Partido Nationalista;;;;;;;;;
