Fixed broken Spanish in reactionary party name

--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -2069,7 +2069,7 @@ KUK_democracy_ADJ;Austro-Hungarian;;;;;;;;;;;;;
 PLC_conservative;Narodowa Demokracja;National-démocratique;Narodowa-Demokracja;;Narodowa-Demokracja;;;;;;;;;
 PLC_radical;Stronnictwo Radykalne;Parti radical;Stronnictwo Radykalne;;Stronnictwo Radykalne;;;;;;;;;
 PLC_communist;Partia Komunistyczna;Parti communiste;Partia Komunistyczna;;Partia Komunistyczna;;;;;;;;;
-SPA_reactionary;Comunión Apostólicos;Comunión Apostólicos;Comunión Apostólicos;;;;;;;;;;;
+SPA_reactionary;Comunión Apostólica;Comunión Apostólica;Comunión Apostólica;;;;;;;;;;;
 SYL;Transylvania;;;;;;;;;;;;;
 SYL_ADJ;Transylvanian;;;;;;;;;;;;;
 TRZ_absolute_monarchy;Trarza;;;;;;;;;;;;;
