--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -4980,7 +4980,7 @@ EVT2600OPTB;Let $STATENAME$ remain separate, for now.;;;;;;;;;;;;;
 EVTNAME2601;Integration Cancelled in $STATENAME$;;;;;;;;;;;;;
 EVTDESC2601;There is no longer a need to justify a claim in $STATENAME$, since it already exists.;;;;;;;;;;;;;
 EVT2601OPTA;So be it.;;;;;;;;;;;;;
-EVT2605OPTA;Long live $COUNTRY$! §RGain 2 infamy§W;;;;;;;;;;;;;
+EVT2605OPTA;Long live $COUNTRY$!;;;;;;;;;;;;;
 EVT2610OPTA;Begin assimilating $STATENAME$. §RGain 2 infamy§W;;;;;;;;;;;;;
 EVT2610OPTB;This will only cause more conflict.;;;;;;;;;;;;;
 EVT2611OPTA;So be it!;;;;;;;;;;;;;
