Frisian parties and province renames + Uralic renamed to Uralic minor as suggested in: https://discord.com/channels/746655643448115200/1298708669763948575/1298708669763948575 https://discord.com/channels/746655643448115200/1320741188407398450/1320741188407398450 https://discord.com/channels/746655643448115200/1308058088674426952/1308058088674426952

--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -1009,7 +1009,7 @@ east_slavic;East Slavic;Slave de l'est;Ostslawisch;;Eslava del este;;;;;;;;;
 russian;Russian;Russe;Russisch;;Rusa;;;;;;;;;
 byelorussian;Belarusian;Biélorusse;Weißrussisch;;Bielorrusa;;;;;;;;;
 ukrainian;Ukrainian;Ukrainien;Ukrainisch;;Ucraniana;;;;;;;;;
-ugrian;Uralic;Ouralien;Uralisch;;Uraliana;;;;;;;;;
+ugrian;Uralic Minor;Ouralien;Uralisch;;Uraliana;;;;;;;;;
 baltic;Baltic;Balte;Baltisch;;El Báltico;;;;;;;;;
 lithuanian;Lithuanian;Lituanien;Litauisch;;Lituana;;;;;;;;;
 latvian;Latvian;Letton;Lettisch;;Letona;;;;;;;;;
@@ -7266,6 +7266,16 @@ FRA_socialist;Républicain démocratique;Républicain démocratique;Républicain démo
 FRA_socialist_2;Possibilistes;Possibilistes;Possibilistes;;Possibilistes;;;;;;;;;
 FRA_communist;Parti Ouvrier Français;Parti communiste français;Parti Ouvrier Français;;Parti Ouvrier Français;;;;;;;;;
 FRA_socialist_3;SFIO;SFIO;SFIO;;SFIO;;;;;;;;;
+FRI_reactionary;Tradisjonalistyske Fryske Bûn;Tradisjonalistyske Fryske Bûn;Tradisjonalistyske Fryske Bûn;;Tradisjonalistyske Fryske Bûn;;;;;;;;;
+FRI_conservative;Fryske Bûn;Fryske Bûn;Fryske Bûn;;Fryske Bûn;;;;;;;;;
+FRI_liberal;Liberale Partij ;Liberale Partij ;Liberale Partij ;;Liberale Partij ;;;;;;;;;
+FRI_liberal_2;Liberale Uny;Liberale Uny;Liberale Uny;;Liberale Uny;;;;;;;;;
+FRI_liberal_3;Roomsk-Katolyk;Roomsk-Katolyk;Roomsk-Katolyk;;Roomsk-Katolyk;;;;;;;;;
+FRI_liberal_4;Frije Liberalen;Frije Liberalen;Frije Liberalen;;Frije Liberalen;;;;;;;;;
+FRI_radical;Radikale Partij;Radikale Partij;Radikale Partij;;Radikale Partij;;;;;;;;;
+FRI_socialist;Sosjaal-Demokratysk Bûn;Sosjaal-Demokratysk Bûn;Sosjaal-Demokratysk Bûn;;Sosjaal-Demokratysk Bûn;;;;;;;;;
+FRI_communist;Kommunistyske Partij;Kommunistyske Partij;Kommunistyske Partij;;Kommunistyske Partij;;;;;;;;;
+FRI_fascist;Fryske Fascistyske Partij;Fryske Fascistyske Partij;ryske Fascistyske Partij;;ryske Fascistyske Partij;;;;;;;;;
 FRM_liberal;Liberaldem. Partei;Liberaldem. Partei;Liberaldem. Partei;;Liberaldem. Partei;;;;;;;;;
 FRM_conservative;Zentrumspartei;Zentrumspartei;Zentrumspartei;;Zentrumspartei;;;;;;;;;
 FRM_liberal_2;Nationalliberale ;Nationalliberale ;Nationalliberale ;;Nationalliberale ;;;;;;;;;
@@ -7384,15 +7394,15 @@ HLS_conservative_3;Christsoz. Arbeiterpartei;Christsoz. Arbeiterpartei;Christsoz
 HLS_radical;Radikale Arbeiterpartei;Arbeiterpartei radical;Radikale Arbeiterpartei;;Radical Arbeiterpartei;;;;;;;;;
 HLS_communist;The Communist Faction;Faction communiste;Die kommunistische Fraktion;;La Facción Comunista;;;;;;;;;
 HLS_fascist;NSDP;NSDP;NSDP;;NSDP;;;;;;;;;
+HOL_reactionary;Nationalist Partij;Partij nationaliste;Nationalist Partij;;Nationalist Partij;;;;;;;;;
 HOL_conservative;Conservatieven;Conservatieven;Conservatieven;;Conservatieven;;;;;;;;;
+HOL_conservative_3;Christelijk Historische;Christelijk Historische;Christelijk Historische;;Christelijk Historische;;;;;;;;;
 HOL_liberal;Liberale Partij ;Liberale Partij ;Liberale Partij ;;Liberale Partij ;;;;;;;;;
 HOL_liberal_2;Liberale Unie;Liberale Unie;Liberale Unie;;Liberale Unie;;;;;;;;;
 HOL_liberal_3;Rooms-Katholieke ;Rooms-Katholieke ;Rooms-Katholieke ;;Rooms-Katholieke ;;;;;;;;;
+HOL_liberal_4;Vrije Liberalen;Vrije Liberalen;Vrije Liberalen;;Vrije Liberalen;;;;;;;;;
 HOL_socialist;Social-Demo. Partij;Social-Demo. Partij;Social-Demo. Partij;;Social-Demo. Partij;;;;;;;;;
-HOL_conservative_3;Christelijk Historische;Christelijk Historische;Christelijk Historische;;Christelijk Historische;;;;;;;;;
-HOL_liberal_5;Vrije Liberalen;Vrije Liberalen;Vrije Liberalen;;Vrije Liberalen;;;;;;;;;
-HOL_reactionary;Nationalist Partij;Partij nationaliste;Nationalist Partij;;Nationalist Partij;;;;;;;;;
-HOL_communist_2;Communist Partij;Partij communiste;Communist Partij;;Communist Partji;;;;;;;;;
+HOL_communist;Communistische Partij Holland;Communistische Partij Holland;Communistische Partij Holland;;Communistische Partij Holland;;;;;;;;;
 HON_conservative;Partido Conservador;Partido Conservador;Partido Conservador;;Partido Conservador;;;;;;;;;
 HON_liberal;Partido Liberal;Partido Liberal;Partido Liberal;;Partido Liberal;;;;;;;;;
 HON_conservative_2;Partido Nacional;Partido Nacional;Partido Nacional;;Partido Nacional;;;;;;;;;
