--- a/GFM/localisation/0000_GFM_Deer.csv
+++ b/GFM/localisation/0000_GFM_Deer.csv
@@ -63,6 +63,7 @@ ZHANKOZHA;\n\nThe colonization of the Aral Sea region by us had already started 
 KYRGYZCLEANUP;\n\nWe have managed to push back the Kokandi army back to the Ferghana Valley and retain our independence! This calls for celebration! A new Kyrgyz Khanate can now be established!;;;;;;;;;;;;;
 KYRGYZRAIDS;The continued existence of the Kara-Kyrgyz Khanate has lead to an increase of hostile raids on our borders.;;;;;;;;;;;;;
 KYRGYZRAIDS2;Recent raids against our neighbours have brought back a great deal of wealth and prestige for the Khanate.;;;;;;;;;;;;;
+KOKQNGTREATY;\n\nOutnumbered and outplanned, our righteous Holy War against the Chinese was perhaps doomed from the start. Following the barbaric execution of Jahangir Khoja, many of his followers in Kashgaria dispersed, making a prolonged war against the Qing impossible to sustain.\n\nDespite this, our courage and prowess seems to have frightened the Dragon Throne to the core, and they have approached us with the intent of establishing cordial relations between our states. Their offer includes pardoning those who fought alongside us in Kashgaria, and most importantly, the position of being their preferred trade partner in Central Asia. While wary of rubbing shoulders with infidels, Madali Khan graciously accepted the agreement, aware of the riches it would bring to his Khanate.;;;;;;;;;;;;;
 kaz_conquer_kokand_title;Conquer the Khanate of Kokand;;;;;;;;;;;;;
 kaz_conquer_kokand_desc;Unite the Kazakh Steppe;;;;;;;;;;;;;
 kaz_conquer_kyrgyz_title;Put an end to Kyrgyz raids;;;;;;;;;;;;;
