--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -347,3 +347,5 @@ EVT1500001OPTA;Honey! Get my covered wagon!;;;;;;;;;;;;;
 EVTNAME1500002;The French Refuse!;;;;;;;;;;;;;
 EVTDESC1500002;Unfortunate news has come from the Foreign Ministry today: the French have refused our offer to purchase Madagascar. This setback has endangered the prospects of ever establishing our own overseas colony, and already some warhawks are calling for... alternative methods of acquisition.;;;;;;;;;;;;;
 EVT1500002OPTA;We are a culturally European nation, and we will have colonies of our own, one way or another.;;;;;;;;;;;;;
+UK_reclaim_ireland_title;Reclaim Ireland;;;;;;;;;;;
+UK_reclaim_ireland_desc;Ever since the Union of the Crowns, we Britons have been aware that it is our divine commandment to bring peace, order, and justice to these islands. Even with Ireland unjustly separated from our nation, and the humiliation this false division brought to us, we didn't forget our duty towards the Irish. Now that we have recovered our strength, let us restore the Union of 1800, for it is the destiny of Great Britain and Ireland to be united forevermore.;;;;;;;;;;;;;
