--- a/GFM/localisation/00_HPM_decisions.csv
+++ b/GFM/localisation/00_HPM_decisions.csv
@@ -1526,7 +1526,7 @@ unite_indonesia_desc;We must unite all of the Malay, Javan, Moluccan and Melanes
 sarawak_protectorate_title;Establish a Protectorate Over Sarawak;;;;;;;;;;;;;
 sarawak_protectorate_desc;The so-called 'White Rajah' dynasty of Sarawak has held close ties with Europe since its creation, and now the possibility of peacefully establishing a protectorate over this kingdom in the East Indies has arisen.;;;;;;;;;;;;;
 sulu_protectorate_title;Establish Protectorate Over Sulu;;;;;;;;;;;;;
-sulu_protectorate_desc;The Sultanate of Sulu has held close ties with Spain for many years, and now the possibility of peacefully establishing a protectorate over this country in the East Indies has arisen.;;;;;;;;;;;;;
+sulu_protectorate_desc;The Sultanate of Sulu has held close ties with $COUNTRY$ for many years, and now the possibility of peacefully establishing a protectorate over this country in the East Indies has arisen.;;;;;;;;;;;;;
 annex_lan_na_title;Annex Lan Na;;;;;;;;;;;;;
 annex_lan_na_desc;The Kingdom of Lan Na must unite with Siam, for the benefit of both our nations in resisting imperialist control.;;;;;;;;;;;;;
 flores_sale_title;The Flores Sale;;;;;;;;;;;;;
