--- a/GFM/localisation/FlavourMod_modifiers.csv
+++ b/GFM/localisation/FlavourMod_modifiers.csv
@@ -226,4 +226,4 @@ slaver_port;The Arab Slave Trade;;;;;;;;;;;;;
 puppet_italy;Italian client Kingdom;;;;;;;;;;;;;
 puppet_italy_desc;We are an Italian client Kingdom.;;;;;;;;;;;;;
 liberte_or_mort;Liberté ou la mort;;;;;;;;;;;;;
-liberte_or_mort_desc;Liberté ou la mort(Freedom or death) we will never allow slavery back on the island ever again.;;;;;;;;;;;;;
+liberte_or_mort_desc;We shall never allow slavery back on Saint-Domningue ever again!;;;;;;;;;;;;;
