minority optimization option

--- a/GFM/localisation/0000Sitka.csv
+++ b/GFM/localisation/0000Sitka.csv
@@ -239,6 +239,8 @@ refute_ger_lorraine_title;Expel the Germans from Lorraine;;;;;;;;;;;;;
 refute_ger_lorraine_desc;After the Germans stole our integral lands in Lorraine, the time has come to expel them from said lands and forever end German claims past Alsace.;;;;;;;;;;;;;
 annex_all_title;Option: Annex Everything;;;;;;;;;;;;;
 annex_all_desc;Take all the land on earth for testing purposes.;;;;;;;;;;;;;
+simplify_minorities_title;Option: Simplify Minorities;;;;;;;;;;;;;
+simplify_minorities_desc;§RDo not take this decision with the morecultures submod enabled§! This decision assimilates provinces with a minority percentage of less than 5% that are also more than 95% primary culture. They instead become 100% primary culture. This reduces population calculation and makes the game run slightly faster, though it removes detail.;;;;;;;;;;;;;
 EVTDESC5329627;Let us decide whether the power in our new Italian puppet shall be in the hands of the northern Italians or the southern Italians.;;;;;;;;;;;;;
 EVT_8023306_NAME_sub;A question of religious tolerance;;;;;;;;;;;;;
 EVT_8023301_NAME_sub;Shall we deal with the capitalists?;;;;;;;;;;;;;
