--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -235,7 +235,7 @@ PROV978;Kharkiv;;;;;;;;;;;;;
 PROV995;Petrozavodsk;;;;;;;;;;;;;
 PROV1008;Moskva;;;;;;;;;;;;;
 PROV1009;Mozhaisk;;;;;;;;;;;;;
-PROV1017;Kursk;;;;;;;;;;;;;
+PROV1017;Oryol;;;;;;;;;;;;;
 PROV1019;Voronezh;;;;;;;;;;;;;
 PROV1041;Elista;;;;;;;;;;;;;
 PROV1045;Migulinskaya;;;;;;;;;;;;;
@@ -469,9 +469,9 @@ PROV2677;Ilimsk;;;;;;;;;;;;;
 PROV2681;Taipeh;;;;;;;;;;;;;
 PROV2682;Obdorsk;;;;;;;;;;;;;
 PROV2683;Narym;;;;;;;;;;;;;
-PROV2685;Verkhoturye;;;;;;;;;;;;;
+PROV2685;Irbit;;;;;;;;;;;;;
 PROV2686;Kainsk;;;;;;;;;;;;;
-PROV2689;Vorkuta;;;;;;;;;;;;;
+PROV2689;Rossosh;;;;;;;;;;;;;
 PROV2690;Agrotur & Dikelya;;;;;;;;;;;;;
 PROV2691;Minusk;;;;;;;;;;;;;
 PROV2693;Essey;;;;;;;;;;;;;
@@ -975,7 +975,7 @@ PROV3903;Lusikisiki;;;;;;;;;;;;;
 PROV3904;Worms;;;;;;;;;;;;;
 PROV3905;Pora Pora;;;;;;;;;;;;;
 PROV3906;Rudolstadt;;;;;;;;;;;;;
-PROV3907;Bakhmut;;;;;;;;;;;;;
+PROV3907;Lugansk;;;;;;;;;;;;;
 PROV3908;Priluki;;;;;;;;;;;;;
 PROV3913;Sozaq;;;;;;;;;;;;;
 PROV3914;Kochkor;;;;;;;;;;;;;
