--- a/GFM/localisation/PDM_CE.csv
+++ b/GFM/localisation/PDM_CE.csv
@@ -183,7 +183,7 @@ PROV781;Zadar;;;;;;;;;;;;;
 PROV782;Ragusa;;;;;;;;;;;;;
 PROV951;Stryi;;;;;;;;;;;;;
 PROV953;Stanislau;;;;;;;;;;;;;
-PROV980;Lugansk;;;;;;;;;;;;;
+PROV980;Starobelsk;;;;;;;;;;;;;
 PROV984;Kem;;;;;;;;;;;;;
 PROV988;Pudozh;;;;;;;;;;;;;
 PROV993;Vytegra;;;;;;;;;;;;;
