--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9362,10 +9362,10 @@ PROV934;Najaf;Nadjaf;Najaf;;Najaf;;;;;;;;;
 PROV935;Kuwait;Koweït;Kuwait;;Kuwait;;;;;;;;;
 PROV936;Grodno;Grodno;Grodno;;Grodno;;;;;;;;;
 PROV938;Lida;Lida;Lida;;Lida;;;;;;;;;
-PROV941;Slutsk;Slutsk;Slutsk;;Slutsk;;;;;;;;;
+PROV941;Baranovichi;Baranovichi;Baranovichi;;Baranovichi;;;;;;;;;
 PROV942;Mozyr;Mozyr;Mozyr;;Mozir;;;;;;;;;
 PROV943;Smolensk;Smolensk;Smolensk;;Smolensk;;;;;;;;;
-PROV944;Órsha;;;;;;;;;;;;;
+PROV944;Cherikov;;;;;;;;;;;;;
 PROV945;Vitebsk;;;;;;;;;;;;;
 PROV948;Mogilyov;;;;;;;;;;;;;
 PROV949;Gómel;;;;;;;;;;;;;
@@ -9377,7 +9377,7 @@ PROV964;Simferopol;Simferopol;Simferopol;;Simferópol;;;;;;;;;
 PROV966;Kerch;Kertch;Kerch;;Kerch;;;;;;;;;
 PROV967;Sevastopol;Sébastopol;Sevastopol;;Sebastopol;;;;;;;;;
 PROV968;Odessa;Odessa;Odessa;;Odesa;;;;;;;;;
-PROV970;Nikolaev;Nikolaev;Nikolaev;;Nikolaev;;;;;;;;;
+PROV970;Kherson;Kherson;Kherson;;Kherson;;;;;;;;;
 PROV973;Melitopol;Melitopol;Melitopol;;Melitopol;;;;;;;;;
 PROV976;Mariupol;Mariupol;Mariupol;;Mariupol;;;;;;;;;
 PROV977;Rossosh;Koursk;Kursk;;Kursk;;;;;;;;;
@@ -9386,10 +9386,10 @@ PROV982;Pechenga;Pechenga;Pechenga;;Pechenga;;;;;;;;;
 PROV983;Kandalaksha;Kandalaksha;Kandalaksha;;Kandalaksha;;;;;;;;;
 PROV985;Mezen;Mezen;Mezen;;Mezen;;;;;;;;;
 PROV986;Naryn Mar;Naryan Mar;Naryn Mar;;Naryn Mar;;;;;;;;;
-PROV987;Ust Sysolsk;Ust Sysolsk;Ust Sysolsk;;Ust Sysolsk;;;;;;;;;
-PROV989;Vologda;Vologda;Vologda;;Vologda;;;;;;;;;
-PROV990;Kotlas;Kotlas;Kotlas;;Kotlas;;;;;;;;;
-PROV991;Uglich;Ouglitch;Uglich;;Uglich;;;;;;;;;
+PROV987;Solvychegodsk;Solvychegodsk;Solvychegodsk;;Solvychegodsk;;;;;;;;;
+PROV989;Kursk;Kursk;Kursk;;Kursk;;;;;;;;;
+PROV990;Nikolsk;Nikolsk;Nikolsk;;Nikolsk;;;;;;;;;
+PROV991;Vologda;Vologda;Vologda;;Vologda;;;;;;;;;
 PROV992;Belozersk;Belozersk;Belozersk;;Belozërsk;;;;;;;;;
 PROV994;St Petersburg;Saint-Pétersbourg;St Petersburg;;San Petersburgo;;;;;;;;;
 PROV996;Luga;Luga;Luga;;Luga;;;;;;;;;
@@ -9409,7 +9409,7 @@ PROV1010;Kaluga;Kalouga;Kaluga;;Kaluga;;;;;;;;;
 PROV1011;Tula;Toula;Tula;;Tula;;;;;;;;;
 PROV1012;Ryazan;Riazan;Ryazan;;Riazán;;;;;;;;;
 PROV1013;Vladimir;Vladimir;Vladimir;;Vladímir;;;;;;;;;
-PROV1014;Vyazma;Viazma;Vyazma;;Vyazma;;;;;;;;;
+PROV1014;Kirov;Kirov;Kirov;;Kirov;;;;;;;;;
 PROV1015;Bryansk;Bryansk;Bryansk;;Bryansk;;;;;;;;;
 PROV1016;Klintsy;;;;;;;;;;;;;
 PROV1018;Bjelgorod;Bjelgorod;Bjelgorod;;Bjelgorod;;;;;;;;;
@@ -10733,8 +10733,8 @@ PROV2692;Kostino;Kostino;Kostino;;Kostino;;;;;;;;;
 PROV2694;Vanavara;Vanavara;Vanavara;;Vanavara;;;;;;;;;
 PROV2695;Mukhtuya;Mukhtuya;Mukhtuya;;Mukhtuya;;;;;;;;;
 PROV2696;Aldan;Aldan;Aldan;;Aldan;;;;;;;;;
-PROV2699;Izhma;Izhma;Izhma;;Izhma;;;;;;;;;
-PROV2700;Usogorsk;Usogorsk;Usogorsk;;Usogorsk;;;;;;;;;
+PROV2699;Menzelinsk;Menzelinsk;Menzelinsk;;Menzelinsk;;;;;;;;;
+PROV2700;Ust Sysolsk;Ust Sysolsk;Ust Sysolsk;;Ust Sysolsk;;;;;;;;;
 PROV2703;Vänern;Vänern;Vänern;;Vänern;;;;;;;;;
 PROV2704;Vättern;Vättern;Vättern;;Vättern;;;;;;;;;
 PROV2705;Gulf of Bothnia;Golfe de Bothnia;Bothnischer Meerbusen;;Golfo de Botnia;;;;;;;;;
