--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9403,7 +9403,7 @@ PROV1003;Novgorod;Novgorod;Nowgorod;;Nóvgorod;;;;;;;;;
 PROV1004;Tikhvin;Tikhvine;Tikhvin;;Tikhvin;;;;;;;;;
 PROV1005;Borovichi;Borovitchi;Borovichi;;Borovichi;;;;;;;;;
 PROV1006;Pskov;Pskov;Pskov;;Pskov;;;;;;;;;
-PROV1007;Velikiye Luki;Velikié Louki;Velikiye Luki;;Velikiie Luki;;;;;;;;;
+PROV1007;Sebezh;Velikié Louki;Velikiye Luki;;Velikiie Luki;;;;;;;;;
 PROV1009;Borodino;Borodino;Borodino;;Borodino;;;;;;;;;
 PROV1010;Kaluga;Kalouga;Kaluga;;Kaluga;;;;;;;;;
 PROV1011;Tula;Toula;Tula;;Tula;;;;;;;;;
