some region nonsense, fixing a bit

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -223,7 +223,7 @@ PROV928;Rewanduz;;;;;;;;;;;;;
 PROV937;Pruzhany;;;;;;;;;;;;;
 PROV939;Pinsk;;;;;;;;;;;;;
 PROV940;Brest-Litovsk;;;;;;;;;;;;;
-PROV946;Lépel;;;;;;;;;;;;;
+PROV946;Barysau;;;;;;;;;;;;;
 PROV947;Pastavy;;;;;;;;;;;;;
 PROV950;Ungwar;;;;;;;;;;;;;
 PROV952;Tarnopol;;;;;;;;;;;;;
