--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9380,7 +9380,7 @@ PROV968;Odessa;Odessa;Odessa;;Odesa;;;;;;;;;
 PROV970;Kherson;Kherson;Kherson;;Kherson;;;;;;;;;
 PROV973;Melitopol;Melitopol;Melitopol;;Melitopol;;;;;;;;;
 PROV976;Mariupol;Mariupol;Mariupol;;Mariupol;;;;;;;;;
-PROV977;Rossosh;Koursk;Kursk;;Kursk;;;;;;;;;
+PROV977;Liski;Liski;Liski;;Liski;;;;;;;;;
 PROV979;Rostov;Rostov;Rostov;;Rostov;;;;;;;;;
 PROV982;Pechenga;Pechenga;Pechenga;;Pechenga;;;;;;;;;
 PROV983;Kandalaksha;Kandalaksha;Kandalaksha;;Kandalaksha;;;;;;;;;
@@ -11453,7 +11453,7 @@ RUS_1090;Georgia;Géorgie;Georgien;;Georgia;;;;;;;;;
 RUS_1098;Armenia;Arménie;Armenien;;Armenia;;;;;;;;;
 RUS_339;Karelia;Karelia;Karelien;;Carelia;;;;;;;;;
 RUS_1003;Novgorod;Novgorod;Nowgorod;;Nóvgorod;;;;;;;;;
-RUS_1006;Pskov;;;;;;;;;;;;;
+RUS_1006;Kursk;;;;;;;;;;;;;
 RUS_943;Smolensk;Smolensk;Smolensk;;Smolensk;;;;;;;;;
 RUS_998;Tver;Tver;Twer;;Tver;;;;;;;;;
 RUS_1009;Chernigov;;;;;;;;;;;;;
