renaming and loc fixes for somaliland

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -889,7 +889,7 @@ PROV3816;Kudugu;;;;;;;;;;;;;
 PROV3817;Velingara;;;;;;;;;;;;;
 PROV3818;Boosaaso;;;;;;;;;;;;;
 PROV3819;Caluula;;;;;;;;;;;;;
-PROV3820;Toyo;;;;;;;;;;;;;
+PROV3820;Xiis;;;;;;;;;;;;;
 PROV3821;Shakka;;;;;;;;;;;;;
 PROV3822;Birao;;;;;;;;;;;;;
 PROV3823;Manú;;;;;;;;;;;;;
@@ -1022,7 +1022,7 @@ PROV3954;Haj Aligholi;;;;;;;;;;;;;
 PROV3955;Sogakope;;;;;;;;;;;;;
 PROV3956;Techiman;;;;;;;;;;;;;
 PROV3957;Materi;;;;;;;;;;;;;
-PROV3958;Burco;;;;;;;;;;;;;
+PROV3958;Maydh;;;;;;;;;;;;;
 PROV3959;Bo;;;;;;;;;;;;;
 PROV3960;Taiama;;;;;;;;;;;;;
 PROV3961;Soma;;;;;;;;;;;;;
