Lake Sevan (and only Lake Sevan) renames

--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -1600,7 +1600,7 @@ PROV3636;Ngarndamukia;;;;;;;;;;;;;
 PROV3637;Lake Gairdner;;;;;;;;;;;;;
 PROV3638;Chott Melghir;;;;;;;;;;;;;
 PROV3639;Chott Felrhir;;;;;;;;;;;;;
-PROV3640;Lake Sevan;;;;;;;;;;;;;
+PROV3640;Ozero Sevan;;;;;;;;;;;;;
 PROV3645;Sakishima;;;;;;;;;;;;;
 PROV3646;Borodino Islands;;;;;;;;;;;;;
 PROV3647;Victoria;;;;;;;;;;;;;
