--- a/GFM/localisation/00_HPM_decisions.csv
+++ b/GFM/localisation/00_HPM_decisions.csv
@@ -2125,7 +2125,7 @@ claim_historic_lanfang_desc;We've been limited to San Khew Jong since the Dutch 
 change_capital_lanfang_title;Change our capital to Pontianak;;;;;;;;;;;;;
 change_capital_lanfang_desc;The Dutch, when they limited us to San Khew Jong, changed our capital to San Khew Jong and removed all our historical importance with it. With Pontianak and our lost territories reconquered, we can finally move our capital.;;;;;;;;;;;;;
 claim_bornean_islands_title;Claim the Deserter Islands;;;;;;;;;;;;;
-claim_bornean_islands_desc;§RGain 3 infamy§! The islands of the Natuna and Bangka Archipelagos have been outposted by our people for years, and have a sizeable Hakka population. With the Dutch expelled from our territory, that islands would help us refuel our ships to India and China. They are in anarchy, so we can take them easily.;;;;;;;;;;;;;
+claim_bornean_islands_desc;§RGain 3 infamy§! The Natuna and Bangka Archipelagos were outposts of our people for many years until we lost them, and they still retain a sizeable Hakka population. With the Dutch expelled from our territory, these islands could help us refuel our ships on their way to India and China. The islands are in anarchy, so we can take them easily.;;;;;;;;;;;;;
 argie_university_title;The $COUNTRY_ADJ$ university reform of $YEAR$;;;;;;;;;;;;;
 argie_university_desc;The $COUNTRY_ADJ$ university reform was a general modernization of the universities, especially tending towards democratization, brought about by student activism during the presidency of Hipolito Yrigoyen. The events started in Córdoba and spread to the rest of $COUNTRY$, and then through much of Latin America.;;;;;;;;;;;;;
 parana_development_title;Focus $COUNTRY$'s development along the Parana river;;;;;;;;;;;;;
