--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -298,7 +298,7 @@ AWS_colonial_company_3;Dschibuti;;;;;;;;;;;;;
 AWS_colonial_company_4;Sagallo;;;;;;;;;;;;;
 WRL_colonial_company;Somaliland Protectorate;;;;;;;;;;;;;
 WRL_colonial_company_2;Côte d'Adel;;;;;;;;;;;;;
-WRL_colonial_company_3;Somali Kûste;;;;;;;;;;;;;
+WRL_colonial_company_3;Somaliküste;;;;;;;;;;;;;
 WRL_colonial_company_4;Somalia Settentrionale;;;;;;;;;;;;;
 SOM_colonial_company;Somalia;;;;;;;;;;;;;
 SOM_colonial_company_2;Somalie;;;;;;;;;;;;;
