middle east terrain update

--- a/GFM/localisation/00_GFM_Terrains.csv
+++ b/GFM/localisation/00_GFM_Terrains.csv
@@ -62,8 +62,8 @@ oslo;Farmlands;;;;;;;;;;;;;
 christiansand;Forest;;;;;;;;;;;;;
 adana;Farmlands;;;;;;;;;;;;;
 ahmedabad;Steppe;;;;;;;;;;;;;
-aleppo;Semidesert;;;;;;;;;;;;;
-amman;Semidesert;;;;;;;;;;;;;
+aleppo;Grassland;;;;;;;;;;;;;
+amman;Steppe;;;;;;;;;;;;;
 andorra;Montane Grassland;;;;;;;;;;;;;
 antakya;Montane Forest;;;;;;;;;;;;;
 aqaba;Semidesert;;;;;;;;;;;;;
@@ -374,8 +374,8 @@ le_mans;Farmlands;;;;;;;;;;;;;
 kosice;Forest Hills;;;;;;;;;;;;;
 kemerovo;Forest Hills;;;;;;;;;;;;;
 kayseri;Montane Grassland;;;;;;;;;;;;;
-jaffa;Semidesert;;;;;;;;;;;;;
-al_majdal;Dry Grassland;;;;;;;;;;;;;
+jaffa;Grassland;;;;;;;;;;;;;
+al_majdal;Steppe;;;;;;;;;;;;;
 innsbruck;Montane Grassland;;;;;;;;;;;;;
 heligoland;Island;;;;;;;;;;;;;
 grozny;Grassland Hills;;;;;;;;;;;;;
@@ -425,9 +425,9 @@ arhus;Farmlands;;;;;;;;;;;;;
 tblisi;Montane Grassland;;;;;;;;;;;;;
 erivan;Grassland Hills;;;;;;;;;;;;;
 baku;Steppe;;;;;;;;;;;;;
-jerusalem;Steppe;;;;;;;;;;;;;
+jerusalem;Grassland Hills;;;;;;;;;;;;;
 baghdad;Grassland;;;;;;;;;;;;;
-damascus;Semidesert;;;;;;;;;;;;;
+damascus;Steppe;;;;;;;;;;;;;
 lvov;Grassland Hills;;;;;;;;;;;;;
 krakow;Farmlands;;;;;;;;;;;;;
 karlsruhe;Forest;;;;;;;;;;;;;
@@ -941,7 +941,7 @@ santa_barbara;Forest Hills;;;;;;;;;;;;;
 shizuoka;Montane Forest;;;;;;;;;;;;;
 zayla;Coastal Desert;;;;;;;;;;;;;
 abudhabi;Coastal Desert;;;;;;;;;;;;;
-acre;Dry Grassland Hills;;;;;;;;;;;;;
+acre;Grassland Hills;;;;;;;;;;;;;
 antalya;Montane Forest;;;;;;;;;;;;;
 arnhem;Farmlands;;;;;;;;;;;;;
 assab;Coastal Desert;;;;;;;;;;;;;
@@ -964,7 +964,7 @@ multan;Floodplain Farmlands;;;;;;;;;;;;;
 peshawar;Floodplain Farmlands;;;;;;;;;;;;;
 rangoon;Floodplain Farmlands;;;;;;;;;;;;;
 samoa;Island;;;;;;;;;;;;;
-sidon;Dry Grassland Hills;;;;;;;;;;;;;
+sidon;Grassland Hills;;;;;;;;;;;;;
 tampico;Forest Hills;;;;;;;;;;;;;
 yazd;Semi-Desert Mountains;;;;;;;;;;;;;
 guangxin;Forest Hills;;;;;;;;;;;;;
@@ -1085,7 +1085,7 @@ hamadan;Montane Grassland;;;;;;;;;;;;;
 ilam;Grassland;;;;;;;;;;;;;
 jura;Forest;;;;;;;;;;;;;
 kapoea;Jungle Farmlands;;;;;;;;;;;;;
-karbala;Semidesert;;;;;;;;;;;;;
+karbala;Steppe;;;;;;;;;;;;;
 kashan;Dry Grassland Hills;;;;;;;;;;;;;
 kem;Taiga;;;;;;;;;;;;;
 loango;Jungle Farmlands;;;;;;;;;;;;;
@@ -1093,7 +1093,7 @@ lome;Jungle;;;;;;;;;;;;;
 lons;Forest Hills;;;;;;;;;;;;;
 madoera;Jungle Hills;;;;;;;;;;;;;
 pudozh;Forest;;;;;;;;;;;;;
-qasrishirin;Steppe;;;;;;;;;;;;;
+qasrishirin;Montane Grassland;;;;;;;;;;;;;
 qazvin;Grassland Hills;;;;;;;;;;;;;
 qeshm;Island;;;;;;;;;;;;;
 rasht;Montane Forest;;;;;;;;;;;;;
@@ -1114,7 +1114,7 @@ bielefeld;Farmlands;;;;;;;;;;;;;
 canterbury;Farmlands;;;;;;;;;;;;;
 fernando_po;Plantation Island;;;;;;;;;;;;;
 galway;Grassland;;;;;;;;;;;;;
-gaza;Semidesert;;;;;;;;;;;;;
+gaza;Steppe;;;;;;;;;;;;;
 gorlitz;Forest;;;;;;;;;;;;;
 greifswald;Farmlands;;;;;;;;;;;;;
 massa;Montane Forest;;;;;;;;;;;;;
