Japan can do historical after btfoing russia

--- a/GFM/localisation/Russo_Japanese_War.csv
+++ b/GFM/localisation/Russo_Japanese_War.csv
@@ -24,11 +24,12 @@ EVTNAME784526;Japan refuses our peace offer!;;;;;;;;;;;;;
 EVTDESC784526;Japan foolishly clings on to the hope that they can turn this war's tide. How much more bloodshed will it take for them to understand their error?;;;;;;;;;;;;;
 EVTNAME784527;A harsher treaty with Russia;;;;;;;;;;;;;
 EVTDESC784527;We now have the ability to demand more territory from Russia than we initially hoped for. Whichever choice we make, it will cripple Russia's presence in East Asia and the Pacific. What shall we demand? (Please note that any choices taken that involve annexing Asian colonies Russia does not own will not work. You will gain infamy for nothing.);;;;;;;;;;;;;
-EVTNAME784528;Japan makes its peace offer;;;;;;;;;;;;;
+EVTNAME784528;Japan makes its Peace Offer;;;;;;;;;;;;;
 EVTDESC784528;Japan demands all of Sakhalin, the Kurils, Outer Manchuria, and any of our East Asian territories. We are obligated to grant them this land, now that the war is over.;;;;;;;;;;;;;
-EVTNAME784529;Japan makes a harsh peace offer;;;;;;;;;;;;;
+EVTDESC7845281;Japan demands South Sakhalin, the Kurils, and any of our East Asian territories. We are obligated to grant them this land, now that the war is over.;;;;;;;;;;;;;
+EVTNAME784529;Japan makes a harsh Peace Offer;;;;;;;;;;;;;
 EVTDESC784529;Japan demands all of our Far Eastern territory up to Kamchatka as well as any East Asian territory. This will block Russia from having a coastline within the Pacific. Nevertheless, we are obligated to give them what they want.;;;;;;;;;;;;;
-EVTNAME784530;Japan's bold peace offer;;;;;;;;;;;;;
+EVTNAME784530;Japan's bold Peace Offer;;;;;;;;;;;;;
 EVTDESC784530;Japan demands all of the Russian Far East, up to Trans-Baikal, as well as any East Asian territory. All of eastern Siberia will become Japanese. They are driving a hard bargain for a vanquished enemy such as us.;;;;;;;;;;;;;
 EVTNAME784531;A harsher treaty with Japan;;;;;;;;;;;;;
 EVTDESC784531;We now have the ability to demand more territory from Japan than we initially hoped for. Whichever choice we make, it will cripple Japan's strategic position in East Asia, making expansion much more difficult for them. What shall we demand? (Please note that any choices taken that involve annexing Asian colonies Japan does not own will not work. You will gain infamy for nothing.);;;;;;;;;;;;;
