--- a/GFM/localisation/00_GSG_claims.csv
+++ b/GFM/localisation/00_GSG_claims.csv
@@ -2,7 +2,7 @@ Key;English;French;German;Polish;Spanish;Italian;Swedish;Czech;Hungarian;Dutch;P
 greater_banat_title;Greater Banat;;;;;;;;;;;;;
 greater_banat_desc;With German villages and towns in the area now outside German control it would be in everyone's best interest for them to unify with Banat.;;;;;;;;;;;;;
 greater_yugo_title;Greater Yugoslavia;;;;;;;;;;;;;
-greater_yugo_desc;Yugoslavia is yet to encompass all lands of the southern slavs, we must seek out and regain these lands for the good of the people.;;;;;;;;;;;;;
+greater_yugo_desc;Yugoslavia is yet to encompass all lands of the southern Slavs, we must seek out and regain these lands for the good of the people.;;;;;;;;;;;;;
 persian_border_dispute_title;Persian Border Dispute;;;;;;;;;;;;;
 persian_border_dispute_desc;The lands of Khuzestan have been dominated by Persia for too long! It is time for us to assert our rights and take back our own!;;;;;;;;;;;;;
 kurdish_diaspora_title;The Kurdish Diaspora;;;;;;;;;;;;;
