--- a/GFM/localisation/00_HPM_Misc.csv
+++ b/GFM/localisation/00_HPM_Misc.csv
@@ -374,8 +374,8 @@ transport_improv;Transportation System;;;;;;;;;;;;;
 transport_improv_l;Transportation System;;;;;;;;;;;;;
 no_transport_improv_desc;The transportation system is undeveloped.;;;;;;;;;;;;;
 yes_transport_improv_desc;The transportation system is being modernized. At least in the capital.;;;;;;;;;;;;;
-pre_indust;Early Industrialisation;;;;;;;;;;;;;
-pre_indust_l;Early Industrialisation;;;;;;;;;;;;;
+pre_indust;Early Industrialization;;;;;;;;;;;;;
+pre_indust_l;Early Industrialization;;;;;;;;;;;;;
 no_pre_indust;Stick to the Old Ways;;;;;;;;;;;;;
 yes_pre_indust;Industrial Progress;;;;;;;;;;;;;
 no_pre_indust_desc;We have no need of industry.;;;;;;;;;;;;;
