--- a/GFM/localisation/00_UncivReforms.csv
+++ b/GFM/localisation/00_UncivReforms.csv
@@ -400,7 +400,7 @@ instituto_industrial_lisboa_desc;The Industrial Institute is providing vocationa
 escola_industrial_do_porto_title;Found Escola Industrial do Porto;;;;;;;;;;;;;
 escola_industrial_do_porto_desc;de Melo also founded the Industrial School of Porto (later a full Institute). Its purpose was to apply science and technology in support of the Regenerador policies.;;;;;;;;;;;;;
 escola_industrial_porto;Industrial School of Porto;;;;;;;;;;;;;
-escola_industrial_porto_desc;The Industrial School is working to harness industrial science and technology in support of our industrialisation policies.;;;;;;;;;;;;;
+escola_industrial_porto_desc;The Industrial School is working to harness industrial science and technology in support of our industrialization policies.;;;;;;;;;;;;;
 form_pba_title;Form Portuguese-Brazilian Union;;;;;;;;;;;;;
 form_pba_desc;Between 1808 and 1822, The Portuguese monarchy had resided in Brazil and the colony was elevated to the status of a Kingdom in personal union with the Crown. This union ended when Brazil declared independence under the King's son, Dom Pedro. With the reconquest of Brazil, we may find it advantageous to bind Brazil to Portugal in the same way once again.;;;;;;;;;;;;;
 ##### Romanian Unification #####;;;;;;;;;;;;;;
